# oopdomaci_dz3

./: AccessDescriptor.cpp  AccessDescriptor.h  AccessException.cpp  AccessException.h  AccessVisitor.cpp  AccessVisitor.h  CMakeLists.txt  CopyPaste.cpp  CopyPaste.h  CreateFile.cpp  CreateFile.h  CreateFolder.cpp  CreateFolder.h  DeleteObject.cpp  DeleteObject.h  FSException.cpp  FSException.h  FSObject.cpp  FSObject.h  FSOperation.cpp  FSOperation.h  FSVisitor.cpp  FSVisitor.h  File.cpp  File.h  Filesystem.cpp  Filesystem.h  Folder.cpp  Folder.h  ListDirectory.cpp  ListDirectory.h  Move.cpp  Move.h  NameCollisionException.cpp  NameCollisionException.h  OperationFailedException.cpp  OperationFailedException.h  ProtectedOperation.cpp  ProtectedOperation.h  ReadFile.cpp  (+12 more)
